# streamlit-wizard

./: Dockerfile  MANIFEST.in  README.md  components.py  example_pages.py  main.py  pyproject.toml
src/static/: style.css
src/streamlit_wizard/: components.py  style.py
static/: style.css
