[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_wizard"
version = "0.0.3"
authors = [
    { name = "Archy de Berker", email = "archy.deberker@gmail.com" },
]
description = "A little streamlit wizard"
readme = "README.md"
dependencies = ["streamlit>1.11"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/archydeberker/streamlit-wizard"
"Bug Tracker" = "https://github.com/archydeberker/streamlit-wizard/issues"